格式化代码

--- a/tduck-api/src/main/resources/templates/mail/update-account-email.html
+++ b/tduck-api/src/main/resources/templates/mail/update-account-email.html
@@ -5,7 +5,7 @@
     <title>重置密码</title>
 </head>
 <body>
-<table id="backgroundTable" style="background-color: #efefef; color:#4c4c4c" border="0" cellpadding="0" cellspacing="0"
+<table border="0" cellpadding="0" cellspacing="0" id="backgroundTable" style="background-color: #efefef; color:#4c4c4c"
        width="100%">
     <tbody>
     <tr>
@@ -17,13 +17,13 @@
                 </tr>
                 </tbody>
             </table>
-            <table id="templateContainer" border="0" cellpadding="0" cellspacing="0" width="689">
+            <table border="0" cellpadding="0" cellspacing="0" id="templateContainer" width="689">
                 <tbody>
                 <tr style="background-color: #fff; padding: 15px">
                     <td align="center" valign="center">
                         <img
-                                style="width: 186px; height: 54px;"
-                                src="http://tduck.smileyi.top/img/indexLogo.372abcee.png"/>
+                                src="http://tduck.smileyi.top/img/indexLogo.372abcee.png"
+                                style="width: 186px; height: 54px;"/>
                         <span style="
                             display: inline-block;
                             vertical-align: bottom;
@@ -41,14 +41,14 @@
 
                             </p>
                             <p style="color:#848484 ;padding-bottom:5px">
-                              <p th:text="${updateEmailUrl}"></p>
+                            <p th:text="${updateEmailUrl}"></p>
                             </p>
                             <p style=" color:#848484; padding-bottom:5px">
                                 如果以上链接无法点击，请将上面的地址复制到你的浏览器（如IE）的地址栏进入TDUCK。</p>
                             <br/>
                             <div style="color:#848484;">
-                                <a style="color:#2672FF; text-decoration:none;"
-                                   href="http://tduck.smileyi.top/">Tduck</a>
+                                <a href="http://tduck.smileyi.top/"
+                                   style="color:#2672FF; text-decoration:none;">Tduck</a>
                                 让你轻松创建专业问卷，快速完成调研任务！
                             </div>
                         </div>
