fix: reset-password.html

--- a/tduck-api/src/main/resources/templates/mail/reset-password.html
+++ b/tduck-api/src/main/resources/templates/mail/reset-password.html
@@ -44,7 +44,7 @@
                             <p th:text="${resetPwdUrl}"></p>
                             </p>
                             <p style=" color:#848484; padding-bottom:5px">
-                                如果以上链接无法点击，请将上面的地址复制到你的浏览器（如IE）的地址栏进入问卷网。</p>
+                                如果以上链接无法点击，请将上面的地址复制到你的浏览器的地址栏进入。</p>
                             <br/>
                             <div style="color:#848484;">
                                 <a href="http://tduck.smileyi.top/"
